# shoprl-fabric

./: .dockerignore  .gitignore  ARCHITECTURE.md  BENCHMARK_VLLM.md  Dockerfile  PROJECT_BRIEF.md  README.md  RUN_DASHBOARD.md  modal_app.py  pyproject.toml
comparisons/: grpo.json  ppo.json  rloo.json
configs/: bench_hf.yaml  bench_vllm.yaml  compare_grpo.yaml  compare_ppo.yaml  compare_rloo.yaml  demo_cpu.yaml  demo_gpu.yaml  demo_gpu_oom.yaml  dev.yaml  grpo_qwen_06b.yaml  grpo_qwen_06b_aws.yaml  grpo_qwen_06b_kaggle.yaml  grpo_qwen_06b_modal.yaml  smoke_cpu.yaml  smoke_gpu.yaml  stub.yaml  sweep_grpo_100.yaml  sweep_grpo_30.yaml  sweep_grpo_50.yaml  train_dev.yaml
docs/: PROGRESS.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
results/: demo.json
scripts/: install_vllm_gpu.sh
tests/: conftest.py  test_alerts.py  test_api.py  test_artifacts.py  test_bench.py  test_checkpoints.py  test_config.py  test_control.py  test_dash_data.py  test_dashboard.py  test_data.py  test_env_reward.py  test_failures.py  test_grpo_advantages.py  test_grpo_kl.py  test_grpo_logprobs.py  test_grpo_loss.py  test_hardening.py  test_integration.py  test_jobstore.py  test_ops_console.py  test_pipeline.py  test_platform_dashboard.py  test_policy.py  test_preflight.py  test_prompt_registry.py  test_registry.py  test_retention.py  test_reward_budget.py  test_reward_composite.py  test_reward_coverage.py  test_reward_groundedness.py  test_reward_quality.py  test_rl_advantages.py  test_rollout_stub.py  (+8 more)
(+83 files in other folders)
